--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "5edfbbf5-67b9-46d9-8ca5-929143abcc11"
 authors = ["Valentin Boettcher"]
 version = "0.1.0"
 
+[deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+LanguageServer = "2b0e0bc5-e4fd-59b4-8912-456d1b03d8d7"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
 [compat]
 julia = "1"
 
